<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_home">خانه</string>
    <string name="title_category">دسته بندی</string>
    <string name="title_search">جستجو</string>
    <string name="title_account">حساب</string>
    <string name="tab_name_fields">رشته ها</string>
    <string name="tab_name_schools">دانشگاه ها</string>
    <string name="tab_name_lessons">درس ها</string>
    <string name="app_name_second">... آنوت</string>
    <string name="in_reading">در حال مطالعه</string>
    <string name="last_handnotes">آخرین جزوه ها</string>
    <string name="public_lessons">دروس عمومی</string>
    <string name="app_name">آنوت</string>
    <string name="open_navigation_bar">open navigation drawer</string>
    <string name="close_navigation_bar">close navigation bar</string>
    <string name="title_activity_login_start">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_favorite_button_title">favorite</string>
    <string name="menu_share_button_title">share</string>
    <string name="addpage_uploadfile_ET">آپلود فایل</string>
    <string name="addpage_choosefile_button">انتخاب فایل</string>
    <string name="university">دانشگاه</string>
    <string name="university_example">دانشگاه چمران</string>
    <string name="field">رشته</string>
    <string name="field_example">علوم کامپیوتر</string>
    <string name="choose_lesson">درس</string>
    <string name="example_lesson">ریاضی 2</string>
    <string name="choose_teacher_tv">استاد</string>
    <string name="teacher_example">فروزش</string>
    <string name="handnote_description_test">جزوه درس ریاضی یک استاد خلیلی جزوه ی خوبیه حتما دانلود کنید. توضیحاتش کامله مناسب برای شب امتحانی ها تمام مباحث ریاضی یک به صورت کامل در این جزوه وجود داره و خوش خطم هست</string>
</resources>