<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".HomePage.AddPage.AddPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/addpage_toolbar_appbarlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/add_page_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="4dp"
                    android:theme="@style/AppTheme"
                    android:background="#F5F5F5"
                    app:popupTheme="@style/AppTheme"
                    app:title="جزوه جدید"
                    app:titleTextColor="@android:color/black">

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_page_upload_file_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/addpage_uploadfile_ET"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/add_page_upload_file_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorSecondary"
                    android:text="@string/addpage_choosefile_button"
                    android:textSize="18sp"
                    app:cornerRadius="58dp" />

            </RelativeLayout>

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E3E3" />

            <LinearLayout
                android:id="@+id/add_page_lyt_university"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_page_university_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_weight="3"
                    android:text="@string/university"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_page_selected_university"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_weight="2"
                    android:text="دانشگاه چمران"
                    android:textColor="@color/colorSecondary"
                    android:textDirection="ltr"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#F9F9F9"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimaryDark" />
            </LinearLayout>

            <View
                style="@style/divider"

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E3E3" />

            <LinearLayout
                android:id="@+id/add_page_lyt_field"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_page_field_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_weight="3"
                    android:text="@string/field"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_page_selected_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_weight="2"
                    android:text="علوم کامپیوتر"
                    android:textColor="@color/colorSecondary"
                    android:textDirection="ltr"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#F9F9F9"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimaryDark" />


            </LinearLayout>

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E3E3" />

            <LinearLayout
                android:id="@+id/add_page_lyt_lesson"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:focusable="true"

                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_page_lesson_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_weight="3"
                    android:text="@string/choose_lesson"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_page_selected_lesson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="انتخاب"
                    android:textColor="@color/colorPrimaryDark"
                    android:textDirection="ltr"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#F9F9F9"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimaryDark" />

            </LinearLayout>

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E3E3" />

            <LinearLayout
                android:id="@+id/add_page_lyt_teacher"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_page_teacher_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_weight="3"
                    android:text="@string/choose_teacher_tv"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/add_page_selected_teacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="انتخاب"
                    android:textColor="@color/colorPrimaryDark"
                    android:textDirection="ltr"
                    android:textSize="18sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="#F9F9F9"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimaryDark" />
            </LinearLayout>

            <View
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E3E3" />

        </LinearLayout>


        <android.support.design.button.MaterialButton
            android:id="@+id/add_page_send_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorSecondary"
            android:text="ارسال"
            android:textSize="25sp"
            app:cornerRadius="58dp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>