<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:layoutDirection="rtl"
    tools:context=".HomePage.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/home_toolbar_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <android.support.v7.widget.Toolbar
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#F5F5F5"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="آنوت"
                        android:id="@+id/logo_tv"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:textSize="20dp"
                        android:layout_alignParentStart="true"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/logo_toolbar" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_lyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/home_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/in_reading"
                        style="@style/ptsBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/space_between_1"

                        android:paddingRight="20sp"
                        android:paddingBottom="4dp"
                        android:text="@string/in_reading"
                        android:textColor="@color/colorSecondary"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_in_reading"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_horizontal_list_height"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/in_reading" />

                    <TextView
                        android:id="@+id/last_handnotes"
                        style="@style/ptsBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/space_between_1"
                        android:paddingRight="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/last_handnotes"
                        android:textColor="@color/colorSecondary"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/list_in_reading" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_last_handnotes"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_horizontal_list_height"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/last_handnotes" />

                    <TextView
                        android:id="@+id/public_lessons"
                        style="@style/ptsBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/space_between_1"
                        android:paddingRight="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/public_lessons"
                        android:textColor="@color/colorSecondary"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/list_last_handnotes" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_public_lessons"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_horizontal_list_height"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/public_lessons" />

                </android.support.constraint.ConstraintLayout>

            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/home_float_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end|right"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="18dp"
                android:backgroundTint="@color/colorSecondary"
                android:clickable="true"
                android:src="@drawable/ic_add"
                android:tint="@android:color/white"
                app:fabSize="normal"
                app:rippleColor="@android:color/white" />

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>
</FrameLayout>